--- a/stylesheet.css
+++ b/stylesheet.css
@@ -996,11 +996,9 @@ header {
 .fifteenth-wrapper h2 {
     display: inline-block;
     font-size: 28px;
-    /* width: 60%; */
     background-color: #F7C23C;
     position: absolute;
     top: 0;
-    /* left: 50%; */
     transform: translateY(-50%) ;
     margin: auto;
     padding-left: 20px;
@@ -1022,8 +1020,153 @@ header {
 .f15w-item h3 {
     color: #F7C23C;
     font-size: 24px;
-
 }
 
-.f15w-para {
+/* -------------------------------------------------------------------- */
+
+.sixteenth-wrapper {
+    background-image: url(img/specialdetail.jpg);
+    background-size: cover;
+    text-align: center;
+    color: white;
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.sixteenth-wrapper h1 {
+    font-size: 28px;
+}
+
+.sixteenth-wrapper p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+
+.s16w-title {
+    /* color: white; */
+    position: relative;
+    margin: auto;
+    width: 60%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.s16w-title:before, .s16w-title:after {
+  content: '';
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  display: inline-block;
+}
+
+
+.s16w-title:before {
+  border-left: solid 5px white;
+  border-top: solid 5px white;
+  top: 0;
+  left: 0;
+}
+
+.s16w-title:after {
+  border-right: solid 5px white;
+  border-bottom: solid 5px white;
+  bottom: 0;
+  right: 0;
+}
+
+/* -------------------------------------------------------------------- */
+
+.seventeenth-wrapper {
+    padding-top: 60px;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+.seventeenth-wrapper h1 {
+    font-size: 28px;
+}
+
+.seventeenth-wrapper h2 {
+    font-size: 20px;
+    margin-bottom: 50px;
+}
+
+.s17w-container {
+    display: flex;
+    margin: auto;
+    width: 60%;
+    text-align: left;
+}
+
+.s17w-left {
+    margin-right: 30px;
+}
+
+.s17w-left img {
+    width: 200px;
+    height: 140px;
+}
+
+.s17w-right ul {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    padding-left: 20px;
+    font-size: 14px;
+}
+
+.s17w-right p {
+    margin-top: 0;
+    font-size: 14px;
+}
+
+/* -------------------------------------------------------------------- */
+
+.eighteenth-wrapper {
+    background-color: #EBB94D;
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
+
+.eighteenth-wrapper h1 {
+    font-size: 28px;
+}
+
+.eighteenth-wrapper p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.s18w-input-form {
+    width: 70%;
+    margin: auto;
+}
+
+.s18w-form {
+    width: 90%;
+    padding: 15px 10px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    border: none;
+}
+
+.s18w-input-form textarea {
+    width: 90%;
+    padding: 15px 10px;
+    margin-top: 25px;
+    margin-bottom: 45px;
+    border-radius: 5px;
+    border: none;
+}
+
+.s18w-submit {
+    width: 92%;
+    background-color: #DA6B64;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 40px;
+    padding: 15px 10px;
+    border: none;
 }
