--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1190,7 +1190,7 @@ header {
     display: block;
     position: relative;
     padding: 10px;
-    font-size: 20px;
+    /* font-size: 20px; */
     font-weight: bold;
     margin-bottom: 5px;
 }
@@ -1200,6 +1200,13 @@ header {
     display: block;
     padding: 20px;
     border: solid 3px #E5E5E5;
+    text-decoration: none;
+    color: black;
+    font-size: 20px;
+}
+
+.n19w-menu-item-link:hover {
+    text-decoration: underline;
 }
 
 .n19w-menu-item-link:after {
@@ -1229,4 +1236,5 @@ header {
 
 .n19w-submenu-item {
     padding: 10px;
+    font-size: 16px;
 }
